[gd_scene load_steps=7 format=2]

[ext_resource path="res://script/stage02.gd" type="Script" id=1]
[ext_resource path="res://prefab/dew.tscn" type="PackedScene" id=2]
[ext_resource path="res://prefab/text_label.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48, 160 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 80, 224 )

[node name="stage02" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 1 )

[node name="dew" parent="." instance=ExtResource( 2 )]
position = Vector2( -128, 496 )

[node name="Area2D" type="Area2D" parent="dew" groups=[
"dew",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="dew/Area2D"]
shape = SubResource( 2 )

[node name="dew_label" type="Label" parent="dew"]
visible = false
margin_left = -80.0
margin_top = -208.0
margin_right = 8.0
margin_bottom = -194.0
rect_scale = Vector2( 1.90946, 2.06894 )
text = "PRESS SPACE!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pos1" type="Position2D" parent="."]
position = Vector2( 384, 496 )

[node name="Tween" type="Tween" parent="."]

[node name="text_label" parent="." instance=ExtResource( 3 )]
position = Vector2( 16, 112 )
text = "SLEEP"

[node name="sleep" type="Area2D" parent="text_label"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="text_label/sleep"]
position = Vector2( 192, 304 )
shape = SubResource( 3 )

[node name="text_label2" parent="." instance=ExtResource( 3 )]
position = Vector2( 368, 112 )
text = "Girlfriend"

[node name="text_label3" parent="." instance=ExtResource( 3 )]
position = Vector2( 704, 112 )
text = "CSGO!"

[node name="text_label4" parent="." instance=ExtResource( 3 )]
position = Vector2( 992, 112 )
text = "Baito"

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1360.0
margin_bottom = 768.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="text_label/sleep" to="." method="_on_sleep_area_entered"]
[connection signal="area_exited" from="text_label/sleep" to="." method="_on_sleep_area_exited"]
